--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.8.8'
-
+    implementation'androidx.core:core-splashscreen:1.0.0'
 
 }
