--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation'androidx.core:core-splashscreen:1.0.0'
+    implementation'androidx.cardview:cardview:1.0.0'
 
 }
